--- a/config-server/pom.xml
+++ b/config-server/pom.xml
@@ -5,7 +5,7 @@
     <artifactId>springcloud</artifactId>
     <version>0.0.1-SNAPSHOT</version>
   </parent>
-  <artifactId>produc-view-service-feign</artifactId>
+  <artifactId>config-server</artifactId>
   
   <dependencies>
   	<dependency>
@@ -13,29 +13,12 @@
   		<artifactId>spring-cloud-starter-netflix-eureka-client</artifactId>
   	</dependency>
   	<dependency>
-  		<groupId>org.springframework.cloud</groupId>
-  		<artifactId>spring-cloud-starter-openfeign</artifactId>
-  	</dependency>
-  	
-  	<dependency>
   		<groupId>org.springframework.boot</groupId>
   		<artifactId>spring-boot-starter-web</artifactId>
   	</dependency>
   	<dependency>
-  		<groupId>org.springframework.boot</groupId>
-  		<artifactId>spring-boot-starter-thymeleaf</artifactId>
-  	</dependency>
-  	
-  	<dependency>
   		<groupId>org.springframework.cloud</groupId>
-  		<artifactId>spring-cloud-starter-zipkin</artifactId>
-  	</dependency>
-  	
-  	<dependency>
-  		<groupId>org.springframework.cloud</groupId>
-  		<artifactId>spring-cloud-starter-config</artifactId>
+  		<artifactId>spring-cloud-config-server</artifactId>
   	</dependency>
   </dependencies>
- 
-  
 </project>
