--- a/pom.xml
+++ b/pom.xml
@@ -55,5 +55,6 @@
   	<module>product-data-service</module>
   	<module>product-view-service-ribbon</module>
   	<module>produc-view-service-feign</module>
+  	<module>config-server</module>
   </modules>
 </project>
